# autodunders

./: LICENSE  pyproject.toml  setup.cfg  tox.ini
src/: autodunders.py
tests/: fakemod.py  test_add_to_class.py  test_add_to_module.py  test_privates.py
